<resources>
    <string name="app_name">Recipe Tracker</string>
    <string name="tendances">Tendances</string>
    <string name="nouveaute">Nouveautés</string>
    <string name="dessert">Desserts</string>

    <string name="recette_text">Poutine</string>
    <string name="recette_description">La poutine est un plat québécois composé de frites et de cheddar, recouvert de sauce brune.</string>

    <string name="poutine">Poutine</string>
    <string name="poutine_description">La poutine est un plat québécois composé de frites et de cheddar, recouvert de sauce brune.</string>

    <string name="tarte_bleuets">Tarte aux bleuets</string>
    <string name="tarte_bleuets_description">La Tarte aux bleuets est un dessert classique convoité tant au Canada et que dans le nord des États-Unis.</string>

    <string name="ingredients">Ingrédients</string>
    <string name="preparation">Préparation</string>
    <string name="search">Search</string>

    <string name="notfavoris">notFavoris</string>
    <string name="favoris">favoris</string>
    <string name="plat">Plats</string>


</resources>