<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/Recette_id"
        android:contentDescription=""
        android:layout_width="300sp"
        android:layout_height="150sp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="20sp"
        android:background="@drawable/conteneur_background"
        android:elevation="10sp"
        android:clickable="true"
        android:onClick="ouvrirRecette"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:focusable="true">

        <ImageView
            android:layout_width="25sp"
            android:layout_height="25sp"
            android:paddingStart="5sp"
            android:src="@drawable/non_favoris"
            android:contentDescription="@string/notfavoris"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:id="@+id/recette_image"
            style="@style/ImageView"
            android:src="@drawable/poutine" />

        <TextView
            android:id="@+id/recette_text"
            android:layout_toEndOf="@id/recette_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recette_text"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/recette_description"
            android:layout_toEndOf="@id/recette_image"
            android:layout_below="@id/recette_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/recette_description"
            android:paddingTop="5sp"
            android:paddingStart="5sp"
            tools:ignore="RtlSymmetry" />
    </RelativeLayout>

</LinearLayout>