<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableLayout
                style="@style/TableLayout"
                android:id="@+id/tendances">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_span="2"
                        android:text="@string/tendances"
                        style="@style/Tendances"/>

                    <ImageButton
                        android:background="#00FFFFFF"
                        android:src="@drawable/arrow_forward" />
                </TableRow>

            </TableLayout>


            <HorizontalScrollView
                android:id="@+id/tendances_scrollview"
                android:layout_below="@+id/tendances"
                android:layout_width="match_parent"
                android:layout_height="180sp">

                <LinearLayout
                    android:id="@+id/tendances_linearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingEnd="20sp"
                    android:orientation="horizontal"
                    tools:ignore="RtlSymmetry">

                </LinearLayout>

            </HorizontalScrollView>

            <TableLayout
                android:layout_below="@id/tendances_scrollview"
                style="@style/TableLayout"
                android:id="@+id/nouveaute">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_span="2"
                        android:text="@string/nouveaute"
                        style="@style/Tendances"/>

                    <ImageButton
                        android:background="#00FFFFFF"
                        android:src="@drawable/arrow_forward"
                        tools:ignore="TouchTargetSizeCheck" />

                </TableRow>

            </TableLayout>


            <HorizontalScrollView
                android:id="@+id/nouveaute_scrollview"
                android:layout_below="@+id/nouveaute"
                android:layout_width="match_parent"
                android:layout_height="180sp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingEnd="20sp"
                    android:orientation="horizontal"
                    tools:ignore="RtlSymmetry">

                </LinearLayout>

            </HorizontalScrollView>



            <TableLayout
                android:layout_below="@id/nouveaute_scrollview"
                style="@style/TableLayout"
                android:id="@+id/dessert">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_span="2"
                        android:text="@string/dessert"
                        style="@style/Tendances"/>

                    <ImageButton
                        android:background="#00FFFFFF"
                        android:src="@drawable/arrow_forward" />

                </TableRow>

            </TableLayout>

            <HorizontalScrollView
                android:id="@+id/dessert_scrollview"
                android:layout_below="@+id/dessert"
                android:layout_width="match_parent"
                android:layout_height="180sp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingEnd="20sp"
                    android:orientation="horizontal"
                    tools:ignore="RtlSymmetry">

                </LinearLayout>

            </HorizontalScrollView>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>